--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
+absl-py==2.1.0
+blinker==1.7.0
+click==8.1.7
 cloudpickle==3.0.0
+colorama==0.4.6
 contourpy==1.2.0
 cycler==0.12.1
 Farama-Notifications==0.0.4
 filelock==3.13.1
+Flask==3.0.2
 fonttools==4.49.0
 fsspec==2024.2.0
+grpcio==1.62.1
 gymnasium==0.29.1
+itsdangerous==2.1.2
 Jinja2==3.1.3
 kiwisolver==1.4.5
+Markdown==3.6
 MarkupSafe==2.1.5
 matplotlib==3.8.3
 mpmath==1.3.0
@@ -17,14 +25,22 @@ packaging==24.0
 pandas==2.2.1
 pillow==10.2.0
 pip==23.3.1
+prettytable==3.10.0
+protobuf==5.26.0
+pyecharts==2.0.5
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 setuptools==68.2.2
+simplejson==3.19.2
 six==1.16.0
 stable-baselines3==2.2.1
 sympy==1.12
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
 torch==2.2.1
 typing_extensions==4.10.0
 tzdata==2024.1
+wcwidth==0.2.13
+Werkzeug==3.0.1
 wheel==0.41.2
